# erpnext_core

./: .gitignore  CHANGES.md  __init__.py  hooks.py  patches.txt  pyproject.toml  setup.py
buying/doctype/purchase_order/: purchase_order.py
buying/doctype/purchase_order_item/: purchase_order_item.json
erpnext/: __init__.py  hooks.py  modules.txt  sitecustomize.py
erpnext/_shims/manufacturing/: __init__.py
erpnext/controllers/: selling_controller.py  subcontracting_inward_controller.py
erpnext/patches/v11_0/: add_sales_stages.py  rename_bom_wo_fields.py  rename_production_order_to_work_order.py  renamed_from_to_fields_in_project.py
erpnext/patches/v11_1/: make_job_card_time_logs.py
erpnext/patches/v12_0/: add_item_name_in_work_orders.py  set_default_batch_size.py  set_produced_qty_field_in_sales_order_for_work_order.py  set_production_capacity_in_workstation.py  update_price_list_currency_in_bom.py
erpnext/patches/v13_0/: add_doctype_to_sla.py  add_missing_fg_item_for_stock_entry.py  rename_issue_doctype_fields.py  set_operation_time_based_on_operating_cost.py  set_work_order_qty_in_so_from_mr.py  update_actual_start_and_end_date_in_wo.py  (+5 more)
erpnext/setup/: install.py
erpnext/startup/: boot.py
erpnext/workspace_sidebar/: projects.json  subcontracting.json
patches/v11_0/: make_job_card.py  rename_overproduction_percent_field.py  update_allow_transfer_for_manufacture.py
patches/v12_0/: update_production_plan_status.py
patches/v13_0/: rename_issue_status_hold_to_on_hold.py  update_amt_in_work_order_required_items.py  update_sla_enhancements.py
(+41 files in other folders)
